syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Chat.Grpc";
option java_multiple_files = true;
option java_package = "com.example.chat.grpc";

message User {
  int32 id = 1;
  string username = 2;
  int64 createdAtUnix = 3;
}

message ChatRoom {
  int32 id = 1;
  string name = 2;
}

message Message {
  int32 id = 1;
  int32 chatRoomId = 2;
  int32 senderId = 3;
  string text = 4;
  int64 sentAtUnix = 5;
  bool isEdited = 6;
  bool isDeleted = 7;
}

message SendMessageRequest {
  int32 chatRoomId = 1;
  int32 senderId = 2;
  string text = 3;
}

message SendMessageResponse {
  Message message = 1;
}

message EditMessageRequest {
  int32 messageId = 1;
  int32 senderId = 2;
  string text = 3;
}

message DeleteMessageRequest {
  int32 messageId = 1;
  int32 requesterId = 2;
}

message SearchMessagesRequest {
  int32 chatRoomId = 1;
  string query = 2;
}

message GetMessagesRequest {
  int32 chatRoomId = 1;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message ListChatRoomsResponse {
  repeated ChatRoom rooms = 1;
}

message CreateChatRoomRequest {
  string name = 1;
}

message CreateChatRoomResponse {
  ChatRoom room = 1;
}

message FriendDto {
  int32 userId = 1;
  string username = 2;
}

message FriendRequestDto {
  int32 id = 1;
  int32 senderId = 2;
  string senderUsername = 3;
  int32 receiverId = 4;
  string status = 5;
  int64 createdAtUnix = 6;
}

message SendFriendRequestRequest {
  int32 requesterId = 1;
  string targetUsername = 2;
}

message RespondFriendRequestRequest {
  int32 requestId = 1;
  bool accept = 2;
}

message RemoveFriendRequest {
  int32 userId = 1;
  int32 friendId = 2;
}

message FriendRequestListResponse {
  repeated FriendRequestDto requests = 1;
}

message FriendListResponse {
  repeated FriendDto friends = 1;
}

message ListFriendRequestsRequest {
  int32 userId = 1;
}

message ListFriendsRequest {
  int32 userId = 1;
}

service ChatService {
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
  rpc ListChatRooms (google.protobuf.Empty) returns (ListChatRoomsResponse);
  rpc CreateChatRoom (CreateChatRoomRequest) returns (CreateChatRoomResponse);
  rpc EditMessage (EditMessageRequest) returns (Message);
  rpc DeleteMessage (DeleteMessageRequest) returns (Message);
  rpc SearchMessages (SearchMessagesRequest) returns (GetMessagesResponse);
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
}

message RegisterUserResponse {
  User user = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}

message GetUserRequest {
  int32 userId = 1;
}

message GetUserResponse {
  User user = 1;
}

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

service FriendService {
  rpc SendFriendRequest (SendFriendRequestRequest) returns (FriendRequestDto);
  rpc RespondFriendRequest (RespondFriendRequestRequest) returns (FriendRequestDto);
  rpc ListIncomingRequests (ListFriendRequestsRequest) returns (FriendRequestListResponse);
  rpc ListFriends (ListFriendsRequest) returns (FriendListResponse);
  rpc RemoveFriend (RemoveFriendRequest) returns (google.protobuf.Empty);
}

message ChatRoomMemberDto {
  int32 userId = 1;
  string username = 2;
  string role = 3; // OWNER, ADMIN, MEMBER
}

message CreateGroupChatRequest {
  int32 ownerId = 1;
  string name = 2;
  string description = 3;
  repeated int32 memberIds = 4;
}

message CreateGroupChatResponse {
  ChatRoom room = 1;
}

message AddMemberRequest {
  int32 chatRoomId = 1;
  int32 requesterId = 2;
  int32 userId = 3;
}

message RemoveMemberRequest {
  int32 chatRoomId = 1;
  int32 requesterId = 2;
  int32 userId = 3;
}

message PromoteMemberRequest {
  int32 chatRoomId = 1;
  int32 requesterId = 2;
  int32 userId = 3;
}

message ListMembersRequest {
  int32 chatRoomId = 1;
}

message ListMembersResponse {
  repeated ChatRoomMemberDto members = 1;
}

message ListUserChatRoomsRequest {
  int32 userId = 1;
}

message ListUserChatRoomsResponse {
  repeated ChatRoom rooms = 1;
}

message GetPrivateChatRoomRequest {
  int32 userId1 = 1;
  int32 userId2 = 2;
}

message GetPrivateChatRoomResponse {
  ChatRoom room = 1;
}

service GroupChatService {
  rpc CreateGroupChat (CreateGroupChatRequest) returns (CreateGroupChatResponse);
  rpc AddMember (AddMemberRequest) returns (google.protobuf.Empty);
  rpc RemoveMember (RemoveMemberRequest) returns (google.protobuf.Empty);
  rpc PromoteMember (PromoteMemberRequest) returns (google.protobuf.Empty);
  rpc ListMembers (ListMembersRequest) returns (ListMembersResponse);
  rpc ListUserChatRooms (ListUserChatRoomsRequest) returns (ListUserChatRoomsResponse);
  rpc GetPrivateChatRoom (GetPrivateChatRoomRequest) returns (GetPrivateChatRoomResponse);
}

